# base

./: .gitignore  CHANGES.md  LICENSE.md  META  META.ab  META.in  Makefile  README.org  ROADMAP.md  _oasis  _tags  base.opam  descr  install.ml  myocamlbuild.ml  opam
.github/workflows/: workflow.yml
bootstrap/promote/: bootstrap_owner.ml  jbuild  promote.ml
bootstrap/src/: .fe.sexp  applicative.ml  applicative.mli  applicative_intf.ml  array_permute.ml  avltree.ml  avltree.mli  base_array.ml  base_array.mli  base_char.ml  base_char.mli  base_hash_set.ml  base_hash_set.mli  base_hash_set_intf.ml  base_hashtbl.ml  base_hashtbl.mli  base_hashtbl_intf.ml  base_int.ml  base_int.mli  base_int32.ml  base_int32.mli  base_int63.ml  base_int63.mli  base_int63_backends.ml  base_int63_emul.ml  base_int63_emul.mli  base_int64.ml  base_int64.mli  base_lazy.ml  base_lazy.mli  base_list.ml  base_list.mli  base_map.ml  base_map.mli  base_map_intf.ml  base_nativeint.ml  base_nativeint.mli  base_printf.ml  base_printf.mli  base_random.ml  (+124 more)
compiler-stdlib/src/: caml.ml  dune  jbuild
composition_infix/src/: composition_infix.mli  dune
generate/: dune  generate_pow_overflow_bounds.ml  jbuild  zarith.ml
hash_types/: README.org
hash_types/src/: base_internalhash_types.ml  dune  internalhash_stubs.c  runtime.wat
hash_types/test/: dune  test_immediate.ml
lint/: dune  jbuild  ppx_base_lint.ml
md5/src/: dune  jbuild  md5_lib.ml  md5_lib.mli
ppx/: README.md
ppx/src/: dune  ppx_base_internal.ml  ppx_base_internal.mli
ppx/test/: test.mlt
sexplib0/: jbuild  sexp.ml  sexp.mli  sexp_conv.ml  sexp_conv.mli  sexp_conv_error.ml
shadow-stdlib/src/: dune  jbuild  shadow_stdlib.ml
src/: am_testing.c  am_testing.h  applicative.ml  applicative.mli  applicative_intf.ml  array.ml  array.mli  array0.ml  array0.mli  array_intf.ml  array_permute.ml  array_permute.mli  array_stubs.c  atomic.ml  atomic.mli  avltree.ml  avltree.mli  backtrace.ml  backtrace.mli  base.ml  base.mld  base_array.ml  base_array.mli  base_char.ml  base_char.mli  base_hash_set.ml  base_hash_set.mli  base_hash_set_intf.ml  base_hashtbl.ml  base_hashtbl.mli  base_hashtbl_intf.ml  base_int.ml  base_int.mli  base_int32.ml  base_int32.mli  base_int63.ml  base_int63.mli  base_int63_backends.ml  base_int63_emul.ml  base_int63_emul.mli  (+337 more)
src/discover/: discover.ml  dune
src/select-int63-backend/: select.ml
src/select-random-repr/: select.ml
src/select-string-set-primitives/: select.ml
test/: avltree_unit_tests.ml  dune  hashtbl_tests.ml  hashtbl_tests.mli  import.ml  int_math_tests.ml  interfaces_tests.ml  jbuild  queue_debug.ml  queue_debug.mli  test_am_testing.ml  test_am_testing.mlt  test_applicative.ml  test_applicative.mlt  test_array.ml  test_array.mlt  test_array_local.mlt  test_atomic.ml  test_backtrace.ml  test_base.ml  test_base_containers.ml  test_base_containers_mono.ml  test_base_containers_poly.ml  test_blit.ml  test_bool.ml  test_bytes.ml  test_capsule.ml  test_char.ml  test_clz_ctz.ml  test_compare.ml  test_container.ml  test_container.mli  test_container_module_types.ml  test_dictionary_module_types.ml  test_either.ml  test_error.ml  test_exn.ml  test_exn_reraise.ml  test_exported_int_conversions.ml  test_float.ml  (+74 more)
test/allocation/: dune  test_array_allocation.ml  test_char_allocation.ml  test_float_allocation.ml  test_hashtbl_allocation.ml  test_list_allocation.ml  test_modes_allocation.ml  test_option_allocation.ml  test_option_array_allocation.ml  test_random_allocation.ml  test_string_allocation.ml  test_type_equal_allocation.ml  test_zero_alloc.ml
test/coverage/helpers/: adjustable.ml  adjustable.mli  adjustable_intf.ml  base_test_coverage_helpers.ml  data.ml  data.mli  data_intf.ml  dune  func.ml  func.mli  func_intf.ml  memo.ml  memo.mli  memo_intf.ml  overrides.ml  overrides.mli  stats.ml  stats.mli
test/coverage/map/: constructor.ml  constructor.mli  constructor_intf.ml  dune  functor.ml  functor_intf.ml  instances.ml  instances.mli  instances_intf.ml  test_all.ml  test_enum.ml  test_enum.mli  test_poly_accessors.ml  test_poly_accessors.mli  test_poly_creators.ml  test_poly_transformers.ml  test_poly_transformers.mli  test_toplevel_accessors.ml  test_toplevel_accessors.mli  test_toplevel_creators.ml  test_toplevel_transformers.ml  test_tree_accessors.ml  test_tree_accessors.mli  test_tree_creators.ml  test_tree_creators.mli  test_tree_transformers.ml  test_using_comparator_accessors.ml  test_using_comparator_creators.ml  test_using_comparator_creators.mli  test_using_comparator_transformers.ml  test_using_comparator_transformers.mli
test/coverage/set/: constructor.ml  constructor_intf.ml  dune  functor.ml  functor_intf.ml  instances.ml  instances_intf.ml  test_all.ml  test_all.mli  test_enum.ml  test_enum.mli  test_poly_accessors.ml  test_poly_creators.ml  test_poly_creators.mli  test_poly_transformers.ml  test_toplevel_accessors.ml  test_toplevel_creators.ml  test_toplevel_creators.mli  test_toplevel_transformers.ml  test_toplevel_transformers.mli  test_tree_accessors.ml  test_tree_creators.ml  test_tree_transformers.ml  test_tree_transformers.mli  test_using_comparator_accessors.ml  test_using_comparator_accessors.mli  test_using_comparator_creators.ml  test_using_comparator_transformers.ml
test/helpers/: base_test_helpers.ml  dune  test_container.ml  test_container.mli  test_stack.ml
test/map_full_interface/: dune  functor.ml  functor.mli  functor_intf.ml  test_all.ml  test_all.mli  test_poly.ml  test_poly.mli  test_poly_intf.ml  test_toplevel.ml  test_toplevel.mli  test_toplevel_intf.ml  test_tree.ml  test_tree.mli  test_tree_intf.ml  test_using_comparator.ml  test_using_comparator.mli  test_using_comparator_intf.ml
wrapper/: base.ml  jbuild
